src/styles/blog.css
.prose {
  display: grid;
  grid-template-columns: 1fr 64ch 1fr;
  grid-column: 1 / span 3;
  inline-size: 100%;
  gap: 1rem;
  color: rgb(var(--gray-dark));
}

.prose > * {
  grid-column: 2 / span 1;
}

/* reset */
.prose p {
  margin: 0;
}

.prose img {
  inline-size: 100%;
  block-size: auto;
}

/* small screens */
@media screen and (width < 768px) {
  .prose {
    grid-template-columns: 1fr;
  }

  .prose > * {
    grid-column: 1 / span 1;
    inline-size: 100%;
  }
}

